--- a/app.css
+++ b/app.css
@@ -15,7 +15,7 @@ h1 {
     font-size: 4em;
     font-weight: 700;
 }
-h3, li a {
+h3 {
     font-size: 1em;
     text-transform: uppercase;
     color: gray;
@@ -25,6 +25,7 @@ h4 {
     text-transform: uppercase;
     color: #d6d6d654;
 }
+
 
 .container {
     margin: 5vw;
@@ -54,32 +55,68 @@ h4 {
     list-style-type: none;
     padding: 0;
 }
-.links ul li a {
-    display: inline-block;     
-    position: relative;    
-    z-index: 1;    
-    margin: -2em;
+.links ul li {
     padding: 40px;
     margin: 20px;
     width: 50vw;
+    max-width: 500px;
     border-radius: 20px;
     transition: box-shadow 1s;
     box-shadow: 1px 1px 10px #cfcfcf;
-    text-align: center;
-    font-weight: 700;
+    display: flex;
+    flex-direction: row;
 }
-.links ul li a:hover {
+.links ul li:hover {
     box-shadow: 1px 1px 10px #f50057; 
 }
-.links ul li a:active {
+.links ul li:active {
+    color: #f50057;
     transition: box-shadow 0.2s;
-    box-shadow: 1px 1px 1px 2px #f50057
+    box-shadow: 1px 1px 1px 2px #f50057;
 }
-.links ul li a {
+.links ul a {
+    color: black;
     text-decoration: none;
+    font-size: 1.5em;
+    font-weight: 700;
+}
+.link-text {
+    margin-left: 20px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.link-text h2 {
+    display: inline-block;
+    font-size: 1.25em;
+    margin: 0;
+}
+.link-text p {
+    color: gray;
+    font-size: 0.6em;
+    font-weight: 400;
+    text-transform: uppercase;
+    margin: 5px 0;
 }
 
-img {
+.img {
     max-width: 100%;
     height: 40vh;
+}
+.thumbnail {
+    max-width: 50%;
+    width: 13vw;
+    height: 100px;
+}
+
+@media only screen and (max-width: 600px) {
+    .link-text {
+        margin: 0;
+    }
+    .thumbnail {
+        display: none;
+    }
 }
