--- a/app.css
+++ b/app.css
@@ -25,9 +25,10 @@ h3 {
     color: gray;
 }
 h4 {
-    font-size: 0.6em;
+    font-size: 1em;
+    color: gray;
+    font-weight: 400;
     text-transform: uppercase;
-    color: #d6d6d654;
 }
 
 .info {
@@ -74,7 +75,6 @@ span.space {
       -webkit-transform: translate3d(0, 100%, 0);
       transform: translate3d(0, 100%, 0);
     }
-  
     to {
       opacity: 1;
       -webkit-transform: translate3d(0, 0, 0);
