--- a/app.css
+++ b/app.css
@@ -7,6 +7,7 @@
 }
 body {
     font-family: 'Open Sans', sans-serif;
+    overflow-x: hidden;
 }
 
 h1, h3 {
@@ -181,7 +182,43 @@ span.space {
     top: 50%;
 }
 
+#header {
+    display: flex;
+    height: 30px;
+    font-size: 1.1em;
+    justify-content: flex-end;
+}
+#header .home, .menu {
+    margin-right: 30px;
+    text-decoration: none;
+    padding: 0 10px;
+    display:inline-block;
+    text-align: center;
+    cursor: pointer;
+    border-bottom-left-radius: 0.25em;
+    border-bottom-right-radius: 0.25em;
+    color: white;
+    font-weight: 700;
+    color: #f50057;
+    border: 2px solid #f50057;
+    transition: background-color 0.5s, color 0.5s;
+}
+#header a.home:hover {
+    color: white;
+    background-color: #f50057;
+}
+#header a.menu {
+    color: black;
+    background-color:white;
+    border: 2px solid black;
+}
+#header a.menu:hover {
+    color: white;
+    background-color: black;
+}
+
 #footer {
+    width: 99vw;
     margin: 10px;
     color:gray; 
     text-align:center; 
@@ -195,6 +232,12 @@ span.space {
     .thumbnail {
         display: none;
     }
+    #header {
+        justify-content: center;
+    }
+    #header .home, .menu {
+        margin: 0 10px;
+    }
 }
 
 /* Modal */
@@ -205,7 +248,7 @@ span.space {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: #00000038;
+    background-color: #00000067;
     opacity: 0;
     visibility: hidden;
     transform: scale(1.1);
@@ -233,7 +276,7 @@ span.space {
     border-radius: 0.25rem;
     color: white;
     font-weight: 700;
-    background-color: #f50056;
+    background-color: #f50057;
 }
 .modal-content h3 {
     margin: 10px;
@@ -247,3 +290,36 @@ span.space {
     transform: scale(1.0);
     transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
 }
+
+/* Sidenav from w3schools*/
+
+/* The side navigation menu */
+.sidenav {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    right: 0;
+    background-color: white; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    transition: 0.2s; /* 0.5 second transition effect to slide in the sidenav */
+    box-shadow: 5px 2px 20px 0px black;
+  }
+  
+  /* When you mouse over the navigation links, change their color */
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+  
+  /* Position and style the close button (top right corner) */
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-right: 15px;
+    margin-left: 50px;
+    line-height: 1;
+    padding: 5px 10px;
+    cursor: pointer;
+  }
