--- a/app.css
+++ b/app.css
@@ -204,6 +204,10 @@ span.space {
 }
 
 #header {
+    width: 100vw;
+    z-index: 1;
+    position: fixed;
+    top: 0;
     display: flex;
     height: 30px;
     font-size: 1.1em;
