--- a/app.css
+++ b/app.css
@@ -14,6 +14,11 @@ p {
     font-size: 18px;
 }
 
+a {
+    color: #f50057;
+    font-weight: bold;
+}
+
 h1, h3 {
     font-family: Helvetica, serif;
     letter-spacing: 2px;
@@ -191,6 +196,7 @@ span.space {
     margin-right: 20vw;
 }
 
+/* Image styles */
 .img {
     max-width: 100%;
     height: 40vh;
@@ -200,7 +206,16 @@ span.space {
     width: 10vw;
     height: 100px;
 }
-
+.small {
+    width: 350px;
+}
+.medium {
+    width: 600px;
+}
+.center {
+    display: block;
+    margin: 20px auto;
+}
 .modal {
     height: 200px;
     width: 400px;
