--- a/app.css
+++ b/app.css
@@ -169,6 +169,15 @@ span.space {
     font-size: 1.5em;
     font-weight: 700;
 }
+.list-heading {
+    text-align: center;
+    font-weight: 400;
+    color: gray;
+    font-size: 16px;
+}
+.list-heading p {
+    font-size: 15px;
+}
 .list-text {
     margin-left: 20px;
     width: 100%;
